[gd_scene load_steps=112 format=3 uid="uid://dq3tijij8xra0"]

[ext_resource type="Script" path="res://scripts/test_player.gd" id="1_06ecq"]
[ext_resource type="Texture2D" uid="uid://b8kum0mfs7msb" path="res://resources/art/Sprout Lands Pack/Characters/Premium Charakter Spritesheet.png" id="2_h72ep"]
[ext_resource type="Script" path="res://scripts/components/attach_point_component.gd" id="3_2uhwa"]
[ext_resource type="Script" path="res://scripts/components/character_movement_component.gd" id="4_8ncc7"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="5_icrsb"]
[ext_resource type="Script" path="res://scripts/components/knockback_component.gd" id="6_1j6jr"]
[ext_resource type="PackedScene" uid="uid://l3ufh23wc32f" path="res://resources/components/health_bar_component.tscn" id="7_feg7t"]
[ext_resource type="PackedScene" uid="uid://chk3784byh0xe" path="res://resources/components/damage_indicator_component.tscn" id="8_b6ol5"]
[ext_resource type="PackedScene" uid="uid://bvxitv8qu6bak" path="res://resources/ui/vector_visualizer.tscn" id="9_03hvc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0msk4"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcxjb"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8tp2"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g8yt"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hu4y8"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2enl4"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec5tw"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhrux"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt276"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6kv1"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o17k"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v07no"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5buq"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5foef"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qepyx"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_imyr6"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8qao"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukbej"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkufg"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuuhq"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pne3u"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lapip"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_52j8y"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_btpl4"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7lbu"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgml4"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc35m"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_otnvt"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bfno"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv58h"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1v4a"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_opgt2"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmc6s"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 768, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmx1h"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 768, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e44j4"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 768, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia8wo"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 768, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcgry"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 768, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1we"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 768, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbce8"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 768, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y08i6"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 768, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhguu"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 672, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vtxe"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 672, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dis8b"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 672, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8jk6"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 672, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajknu"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 672, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiutd"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 672, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsn1k"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 672, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp4gy"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 672, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6smi"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 720, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqinc"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 720, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s2f0"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 720, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmowt"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 720, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ertqj"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 720, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_or02r"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 720, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gna0"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 720, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo0q7"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 720, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj5u4"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7k0l"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmw0g"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_emlbv"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7frg"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v2u8"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf2gv"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg3rc"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs3iv"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a0oc"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e8l8"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkugf"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj6d2"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2drb0"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqd06"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx1mi"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_epjmo"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytto4"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6b0a"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o86q"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3ltx"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt36c"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7mpb"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtt6x"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndyi4"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd56h"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1id6"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu6pi"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vfwq"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjnvr"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3we6c"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5u22"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo2cv"]
atlas = ExtResource("2_h72ep")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8tbh"]
atlas = ExtResource("2_h72ep")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e23rk"]
atlas = ExtResource("2_h72ep")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmvpa"]
atlas = ExtResource("2_h72ep")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr2ee"]
atlas = ExtResource("2_h72ep")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdaiy"]
atlas = ExtResource("2_h72ep")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfyde"]
atlas = ExtResource("2_h72ep")
region = Rect2(288, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooe26"]
atlas = ExtResource("2_h72ep")
region = Rect2(336, 240, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_sgph8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0msk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcxjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8tp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g8yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hu4y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2enl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec5tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhrux")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt276")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6kv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o17k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v07no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5buq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5foef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qepyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imyr6")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8qao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukbej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkufg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuuhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pne3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lapip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52j8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btpl4")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7lbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgml4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc35m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otnvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bfno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv58h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1v4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opgt2")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_cmc6s")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_dmx1h")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_e44j4")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_ia8wo")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_hcgry")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_8f1we")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_jbce8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y08i6")
}],
"loop": true,
"name": &"slash_down",
"speed": 10.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_lhguu")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_0vtxe")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_dis8b")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_l8jk6")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ajknu")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_uiutd")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_tsn1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp4gy")
}],
"loop": true,
"name": &"slash_left",
"speed": 10.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_u6smi")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_bqinc")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_1s2f0")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_dmowt")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ertqj")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_or02r")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_7gna0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo0q7")
}],
"loop": true,
"name": &"slash_right",
"speed": 10.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_wj5u4")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_a7k0l")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_fmw0g")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_emlbv")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_v7frg")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_1v2u8")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_lf2gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg3rc")
}],
"loop": true,
"name": &"slash_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs3iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a0oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e8l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkugf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj6d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2drb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqd06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx1mi")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_epjmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytto4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6b0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o86q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3ltx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt36c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7mpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtt6x")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndyi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd56h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1id6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu6pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vfwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjnvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3we6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5u22")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo2cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8tbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e23rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmvpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr2ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdaiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfyde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooe26")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vh0j4"]
radius = 30.0

[sub_resource type="Animation" id="Animation_xg1dk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_woc0h"]
resource_name = "damage_flicker"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.75, 0.75, 0.27451), Color(1, 0.74902, 0.74902, 1), Color(1, 0.75, 0.75, 0.27451), Color(1, 0.74902, 0.74902, 1), Color(1, 0.75, 0.75, 0.27451), Color(1, 0.74902, 0.74902, 1), Color(1, 0.75, 0.75, 0.27451), Color(1, 0.74902, 0.74902, 1), Color(1, 0.75, 0.75, 0.27451), Color(1, 0.74902, 0.74902, 1), Color(1, 0.75, 0.75, 0.27451), Color(1, 0.74902, 0.74902, 1), Color(1, 0.75, 0.75, 0.27451), Color(1, 0.74902, 0.74902, 1), Color(1, 0.75, 0.75, 0.27451), Color(1, 0.74902, 0.74902, 1), Color(1, 0.75, 0.75, 0.27451), Color(1, 0.74902, 0.74902, 1), Color(1, 0.75, 0.75, 0.27451), Color(1, 0.74902, 0.74902, 1)]
}

[sub_resource type="Animation" id="Animation_bjqq2"]
resource_name = "null"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_134ir"]
_data = {
"RESET": SubResource("Animation_xg1dk"),
"damage_flicker": SubResource("Animation_woc0h"),
"null": SubResource("Animation_bjqq2")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_06ecq")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -28)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_sgph8")
animation = &"idle_down"

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vh0j4")

[node name="AttachPointComponent" type="Node2D" parent="."]
script = ExtResource("3_2uhwa")

[node name="Center" type="Node2D" parent="AttachPointComponent"]
position = Vector2(0, -29)

[node name="VectorVisualizer" parent="AttachPointComponent/Center" node_paths=PackedStringArray("origin") instance=ExtResource("9_03hvc")]
scale = Vector2(6, 6)
origin = NodePath("../../..")
debug_color = Color(0.360784, 0.498039, 1, 0.411765)

[node name="Head" type="Node2D" parent="AttachPointComponent"]
position = Vector2(0, -39)

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("4_8ncc7")
character = NodePath("..")
top_speed = 500.0
acceleration = 0.2
deceleration = 0.1

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("5_icrsb")
current_hp = 1000
max_hp = 1000
invul_seconds = 0.41

[node name="KnockbackComponent" type="Node" parent="." node_paths=PackedStringArray("health", "movement")]
script = ExtResource("6_1j6jr")
health = NodePath("../HealthComponent")
movement = NodePath("../MovementComponent")
knockback_factor = 1.5

[node name="HealthBarComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_feg7t")]
position = Vector2(0, -91)
health_component = NodePath("../HealthComponent")

[node name="DamageIndicator Component" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("8_b6ol5")]
position = Vector2(0, -29)
health_component = NodePath("../HealthComponent")
position_dither = 0

[node name="SpriteEffects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_134ir")
}

[connection signal="on_invulnerable_start" from="HealthComponent" to="SpriteEffects" method="play" binds= ["damage_flicker"]]
[connection signal="on_invulnerable_stop" from="HealthComponent" to="SpriteEffects" method="stop" binds= [false]]
